<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/item_member_avatar_size"
        android:layout_height="@dimen/item_member_avatar_size"
        android:layout_centerVertical="true" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_mute"
        android:layout_width="@dimen/item_mute_size"
        android:layout_height="@dimen/item_mute_size"
        android:layout_alignEnd="@id/iv_avatar"
        android:layout_alignBottom="@id/iv_avatar"
        android:src="@mipmap/ic_mic_off_little" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/item_member_margin_horizontal"
        android:layout_marginEnd="@dimen/item_member_margin_horizontal"
        android:layout_toStartOf="@id/btn_role"
        android:layout_toEndOf="@id/iv_avatar"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/item_text_color"
        android:textSize="@dimen/dialog_member_item_text_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_role"
        android:layout_width="@dimen/item_member_btn_width"
        android:layout_height="@dimen/item_member_btn_height"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/btn_mute"
        android:background="@drawable/bg_member_item_btn"
        android:padding="0dp"
        android:text="@string/to_audience"
        android:textColor="@color/item_text_color"
        android:textSize="@dimen/item_member_btn_text_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_mute"
        android:layout_width="@dimen/item_member_btn_width"
        android:layout_height="@dimen/item_member_btn_height"
        android:layout_toStartOf="@id/btn_game_over"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/item_member_margin_horizontal"
        android:background="@drawable/bg_member_item_btn"
        android:padding="0dp"
        android:text="@string/turn_off_mic"
        android:textColor="@color/item_text_color"
        android:textSize="@dimen/item_member_btn_text_size" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_game_over"
        android:layout_width="@dimen/item_member_btn_width"
        android:layout_height="@dimen/item_member_btn_height"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/item_member_margin_horizontal"
        android:background="@drawable/bg_member_item_btn"
        android:padding="0dp"
        android:text="@string/turn_game_over"
        android:textColor="@color/item_text_color"
        android:textSize="@dimen/item_member_btn_text_size"
        android:visibility="visible"/>

</RelativeLayout>
